fix page break inside makrdown

--- a/src/components/Sections/SectionMarkdown.less
+++ b/src/components/Sections/SectionMarkdown.less
@@ -37,7 +37,6 @@
     margin-block-end: 1.1em;
     margin-inline-start: 0;
     margin-inline-end: 0;
-    page-break-inside: avoid;
 
     &:last-child {
       margin-bottom: 0 !important;
